--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "About"
       href: about.html
+    - text: "Plotly"
+      href: plotly.html
     - icon: fa-envelope fa-lg
       href: mailto:<erfan_farid@yahoo.com>
     - icon: fa-github fa-lg
